20200325:  - Updating to reflect changes to nested API.  - Updating to reflect changes to nomenclature in manuscript.  - Updating DC_soma data analysis and figures.  - Implementing hybrid model with NMDA-R nonlinear voltage-dependence.

--- a/config/process_biBTSP_data_DC_soma_depo_config.yaml
+++ b/config/process_biBTSP_data_DC_soma_depo_config.yaml
@@ -19,6 +19,7 @@
     sampling_rate: 1000.0
     spont: False
     DC_soma: True
+    DC_soma_val: 10.
 33:
   1:
     current_laps:
@@ -40,6 +41,7 @@
     sampling_rate: 1000.0
     spont: False
     DC_soma: True
+    DC_soma_val: 10.
 34:
   1:
     current_laps:
@@ -59,6 +61,7 @@
     sampling_rate: 1000.0
     spont: False
     DC_soma: True
+    DC_soma_val: 10.
 35:
   1:
     current_laps:
@@ -80,6 +83,7 @@
     sampling_rate: 1000.0
     spont: False
     DC_soma: True
+    DC_soma_val: 10.
 36:
   1:
     current_laps:
@@ -101,3 +105,4 @@
     sampling_rate: 1000.0
     spont: False
     DC_soma: True
+    DC_soma_val: 10.
