20200325:  - Updating to reflect changes to nested API.  - Updating to reflect changes to nomenclature in manuscript.  - Updating DC_soma data analysis and figures.  - Implementing hybrid model with NMDA-R nonlinear voltage-dependence.

--- a/config/optimize_biBTSP_synthetic_hybrid_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_config.yaml
@@ -58,6 +58,10 @@ rel_bounds:
   - '>'
   - 1.0
   - global_signal_decay
+- - vd_th
+  - '<='
+  - 1.0
+  - peak_delta_ramp
 - - k_pot
   - '>'
   - 1.0
