--- a/config/optimize_biBTSP_synthetic_hybrid_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_config.yaml
@@ -5,7 +5,10 @@ bounds:
   vd_th: !!python/tuple
   - -40
   - 25.
-  vd_min: !!python/tuple
+  vd_pot_min: !!python/tuple
+  - 0.
+  - 1.
+  vd_dep_min: !!python/tuple
   - 0.
   - 1.
   f_pot_peak: !!python/tuple
@@ -45,6 +48,8 @@ bounds:
   - 10.
   - 40.
 default_params:
+  peak_delta_weight: 2.
+  peak_delta_ramp: 15.
 rel_bounds:
 - - local_signal_decay
   - '>'
@@ -127,7 +132,7 @@ kwargs:
   default_run_vel: 25.
   induction_loc:
     '1': 120.
-    '2': 60.
+    '2': 45.
   target_peak_delta_weight: 3.
   target_peak_shift_1: -10.
   target_peak_shift_2: 0.
@@ -151,7 +156,8 @@ param_gen: PopulationAnnealing
 param_names:
 - vd_peak
 - vd_th
-- vd_min
+- vd_pot_min
+- vd_dep_min
 - f_pot_peak
 - f_pot_th
 - f_dep_th
@@ -186,6 +192,7 @@ x0:
   local_signal_rise: 1.939650E+02
   peak_delta_ramp: 15.
   peak_delta_weight: 2.
-  vd_min: 0.1
+  vd_pot_min: 0.1
+  vd_dep_min: 0.9
   vd_peak: 10.
   vd_th: 0.
