--- a/config/optimize_biBTSP_synthetic_hybrid_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_config.yaml
@@ -8,9 +8,6 @@ bounds:
   vd_th_dep: !!python/tuple
   - -40.
   - 15.
-  vd_min: !!python/tuple
-  - 0.
-  - 1.
   f_pot_peak: !!python/tuple
   - 0.001
   - 1.
@@ -41,12 +38,7 @@ bounds:
   global_signal_decay: !!python/tuple
   - 50.
   - 2500.
-  peak_delta_weight: !!python/tuple
-  - 1.5
-  - 4.
 default_params:
-  # peak_delta_weight: 2.5
-  vd_min: 0.
 rel_bounds:
 - - local_signal_decay
   - '>'
@@ -122,8 +114,10 @@ kwargs:
   verbose: 1
   min_delta_weight: -0.2
   min_delta_ramp: -60.
-  plateau_delta_vm: 15.
+  plateau_delta_vm: 25.
   peak_delta_ramp: 40.
+  peak_delta_weight: 2.5
+  vd_min: 0.
   default_run_vel: 25.
   induction_loc:
     '1': 120.
@@ -151,7 +145,6 @@ param_names:
 - vd_peak
 - vd_th_pot
 - vd_th_dep
-- vd_min
 - f_pot_peak
 - f_pot_th
 - f_dep_th
@@ -162,7 +155,6 @@ param_names:
 - local_signal_decay
 - global_signal_rise
 - global_signal_decay
-- peak_delta_weight
 target_range:
   ramp_offset: 0.01
   delta_min_val: 0.01
@@ -183,9 +175,6 @@ x0:
   k_pot: 2.280166E+00
   local_signal_decay: 1.191872E+03
   local_signal_rise: 1.939650E+02
-  peak_delta_ramp: 15.
-  peak_delta_weight: 2.
-  vd_min: 0.
   vd_peak: 10.
   vd_th_pot: 0.
   vd_th_dep: -40.
