--- a/config/optimize_biBTSP_synthetic_hybrid_alt_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_alt_config.yaml
@@ -28,7 +28,7 @@ bounds:
   - 10.
   local_signal_decay: !!python/tuple
   - 50.
-  - 2500.
+  - 1250.
   global_signal_decay: !!python/tuple
   - 50.
   - 2500.
@@ -102,7 +102,7 @@ kwargs:
   min_delta_ramp: -60.
   plateau_delta_vm: 25.
   peak_delta_ramp: 40.
-  peak_delta_weight: 2.5
+  peak_delta_weight: 3.
   vd_min: 0.
   default_run_vel: 25.
   induction_loc:
