--- a/config/process_biBTSP_data_DC_soma_depo_config.yaml
+++ b/config/process_biBTSP_data_DC_soma_depo_config.yaml
@@ -1,76 +1,79 @@
 32:
   1:
-    current_laps:
+    current_columns:
     - 5
     - 6
     - 7
     - 8
     - 9
     file_name: 190629_1.txt
-    position_laps:
+    position_columns:
       induction:
       - 0
       - 1
       - 2
       - 3
       - 4
-    ramp_laps:
+    ramp_columns:
       after: 10
     sampling_rate: 1000.0
     spont: False
     DC_soma: True
-    DC_soma_val: 10.
+    induction_t_column: 12
+    induction_delta_vm_column: 11
 33:
   1:
-    current_laps:
+    current_columns:
     - 1
     - 3
     - 5
     - 7
     - 9
     file_name: 190709_2.txt
-    position_laps:
+    position_columns:
       induction:
       - 0
       - 2
       - 4
       - 6
       - 8
-    ramp_laps:
+    ramp_columns:
       after: 10
     sampling_rate: 1000.0
     spont: False
     DC_soma: True
-    DC_soma_val: 10.
+    induction_t_column: 12
+    induction_delta_vm_column: 11
 34:
   1:
-    current_laps:
+    current_columns:
     - 1
     - 3
     - 5
     - 7
     file_name: 190726_4.txt
-    position_laps:
+    position_columns:
       induction:
       - 0
       - 2
       - 4
       - 6
-    ramp_laps:
+    ramp_columns:
       after: 8
     sampling_rate: 1000.0
     spont: False
     DC_soma: True
-    DC_soma_val: 10.
+    induction_t_column: 9
+    induction_delta_vm_column: 10
 35:
   1:
-    current_laps:
+    current_columns:
     - 1
     - 3
     - 5
     - 7
     file_name: 190727_2.txt
-    position_laps:
+    position_columns:
       induction:
       - 0
       - 2
@@ -78,31 +81,48 @@
       - 6
       post:
       - 8
-    ramp_laps:
+    ramp_columns:
       after: 9
     sampling_rate: 1000.0
     spont: False
     DC_soma: True
-    DC_soma_val: 10.
+    induction_t_column: 11
+    induction_delta_vm_column: 10
 36:
   1:
-    current_laps:
+    current_columns:
     - 1
     - 3
     - 5
     - 7
     - 9
     file_name: 190801_1.txt
-    position_laps:
+    position_columns:
       induction:
       - 0
       - 2
       - 4
       - 6
       - 8
-    ramp_laps:
+    ramp_columns:
       after: 10
     sampling_rate: 1000.0
     spont: False
     DC_soma: True
-    DC_soma_val: 10.
+    induction_t_column: 12
+    induction_delta_vm_column: 11
+43:
+  1:
+    induction_vm_columns:
+      - 0
+      - 1
+      - 2
+      - 3
+      - 4
+    ramp_columns:
+      after: 5
+    induction_t_column: 6
+    spont: False
+    DC_soma: True
+    DC_soma_val: 6.
+    file_name: yl190730_1.txt
