--- a/config/optimize_biBTSP_synthetic_hybrid_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_config.yaml
@@ -116,18 +116,18 @@ kwargs:
   min_delta_ramp: -60.
   plateau_delta_vm: 25.
   peak_delta_ramp: 40.
-  peak_delta_weight: 3.
+  peak_delta_weight: 2.5
   vd_min: 0.
   default_run_vel: 25.
   induction_loc:
     '1': 120.
     '2': 45.
   target_ramp_width: 160.
-  target_peak_delta_weight: 3.
+  target_peak_delta_weight: 2.5
   target_peak_shift_1: -10.
   target_peak_shift_2: 0.
   target_peak_val_1: 8.
-  target_peak_val_1_depo: 12.
+  target_peak_val_1_depo: 12.  # 12.
   target_peak_val_2: 8.
   target_min_val_2: 4.
   target_ramp_offset_1_depo: 10.
