--- a/config/optimize_biBTSP_synthetic_hybrid_alt2_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_alt2_config.yaml
@@ -98,6 +98,7 @@ kwargs:
   data_file_name: 20190711_biBTSP_data_calibrated_input.hdf5
   input_field_width: 90.  # cm
   verbose: 1
+  num_induction_laps: 2
   min_delta_weight: -0.2
   min_delta_ramp: -60.
   plateau_delta_vm: 25.
@@ -126,6 +127,7 @@ objective_names:
 - induction2_residual_score
 - induction2_hyper_residual_score
 - self_consistent_delta_residual_score
+- ramp_amp_after_first_plateau
 optimization_title: biBTSP_synthetic_hybrid_alt2
 param_gen: PopulationAnnealing
 param_names:
