--- a/config/optimize_biBTSP_synthetic_hybrid_alt_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_alt_config.yaml
@@ -28,10 +28,16 @@ bounds:
   - 10.
   local_signal_decay: !!python/tuple
   - 50.
-  - 2500.
+  - 1500.
   global_signal_decay: !!python/tuple
   - 50.
-  - 2500.
+  - 1500.
+  peak_delta_ramp: !!python/tuple
+  - 15.
+  - 40.
+  peak_delta_weight: !!python/tuple
+    - 1.5
+    - 4.
 default_params:
 rel_bounds:
 - - local_signal_decay
@@ -101,9 +107,6 @@ kwargs:
   num_induction_laps: 2
   min_delta_weight: -0.2
   min_delta_ramp: -60.
-  plateau_delta_vm: 25.
-  peak_delta_ramp: 40.
-  peak_delta_weight: 3.
   vd_min: 0.
   default_run_vel: 25.
   induction_loc:
@@ -142,6 +145,8 @@ param_names:
 - k_dep
 - local_signal_decay
 - global_signal_decay
+- peak_delta_ramp
+- peak_delta_weight
 target_range:
   ramp_offset: 0.01
   delta_min_val: 0.01
@@ -163,3 +168,5 @@ x0:
   vd_half_width: 4.648724E+00
   vd_th_dep: -1.963440E+01
   vd_th_pot: -1.492053E+00
+  peak_delta_ramp: 40.
+  peak_delta_weight: 3.
