--- a/config/optimize_biBTSP_WD_D_cli_config.yaml
+++ b/config/optimize_biBTSP_WD_D_cli_config.yaml
@@ -1,5 +1,5 @@
 bounds:
-  f_pot_peak: !!python/tuple
+  f_pot_half_width: !!python/tuple
   - 0.001
   - 1.
   f_pot_th: !!python/tuple
@@ -8,7 +8,7 @@ bounds:
   f_dep_th: !!python/tuple
   - 0.001
   - 1.
-  f_dep_peak: !!python/tuple
+  f_dep_half_width: !!python/tuple
   - 0.001
   - 1.
   k_pot: !!python/tuple
@@ -88,10 +88,10 @@ objective_names:
 optimization_title: biBTSP_WD_D
 param_gen: PopulationAnnealing
 param_names:
-- f_pot_peak
+- f_pot_half_width
 - f_pot_th
 - f_dep_th
-- f_dep_peak
+- f_dep_half_width
 - k_pot
 - k_dep
 - local_signal_decay
@@ -109,8 +109,8 @@ x0:
   local_signal_decay: 1.250320E+03
   peak_delta_weight: 3.699263E+00
   k_dep: 1.347899E-01
-  f_dep_peak: 8.584021E-03
+  f_dep_half_width: 8.584021E-03
   f_dep_th: 2.411664E-03
   k_pot: 4.834452E-01
-  f_pot_peak: 6.474074E-02
+  f_pot_half_width: 6.474074E-02
   f_pot_th: 1.767498E-01
