--- a/config/optimize_biBTSP_WD_D_cli_config.yaml
+++ b/config/optimize_biBTSP_WD_D_cli_config.yaml
@@ -76,7 +76,7 @@ get_features_stages:
 get_objectives:
   optimize_biBTSP_WD_D: get_objectives
 kwargs:
-  data_file_name: 20190711_biBTSP_data_calibrated_input.hdf5
+  data_file_name: 20200427_biBTSP_data.hdf5
   input_field_width: 90.  # cm
   verbose: 1
   min_delta_weight: -0.2
@@ -84,7 +84,6 @@ objective_names:
 - spont_residual_score
 - exp1_residual_score
 - exp2_residual_score
-- self_consistent_delta_residual_score
 optimization_title: biBTSP_WD_D
 param_gen: PopulationAnnealing
 param_names:
@@ -102,7 +101,7 @@ target_range:
   delta_min_val: 0.01
   delta_peak_val: 0.01
   residuals: 0.1
-  weights_smoothness: 0.005
+  weights_smoothness: 0.015
 target_val:
 x0:
   global_signal_decay: 4.489167E+02
