--- a/config/optimize_biBTSP_VD_E_cli_config.yaml
+++ b/config/optimize_biBTSP_VD_E_cli_config.yaml
@@ -60,6 +60,14 @@ feature_names:
 - exp2_delta_min_loc
 - exp2_delta_val_at_target_min
 - exp2_delta_val_at_model_min
+- exp3_delta_val_at_target_peak
+- exp3_delta_val_at_model_peak
+- exp3_delta_width
+- exp3_delta_peak_shift
+- exp3_delta_asymmetry
+- exp3_delta_min_loc
+- exp3_delta_val_at_target_min
+- exp3_delta_val_at_model_min
 update_context:
 - - optimize_biBTSP_VD_E
   - update_model_params
@@ -75,7 +83,7 @@ get_features_stages:
 get_objectives:
   optimize_biBTSP_VD_E: get_objectives
 kwargs:
-  data_file_name: 20190711_biBTSP_data_calibrated_input.hdf5
+  data_file_name: 20200427_biBTSP_data.hdf5
   input_field_width: 90.  # cm
   verbose: 1
   min_delta_weight: -0.2
@@ -83,7 +91,7 @@ objective_names:
 - spont_residual_score
 - exp1_residual_score
 - exp2_residual_score
-- self_consistent_delta_residual_score
+- exp3_residual_score
 optimization_title: biBTSP_VD_E
 param_gen: PopulationAnnealing
 param_names:
@@ -101,7 +109,7 @@ target_range:
   delta_min_val: 0.01
   delta_peak_val: 0.01
   residuals: 0.1
-  weights_smoothness: 0.005
+  weights_smoothness: 0.015
 target_val:
 x0:
   peak_delta_ramp: 15.
