--- a/config/optimize_biBTSP_WD_E_cli_config.yaml
+++ b/config/optimize_biBTSP_WD_E_cli_config.yaml
@@ -1,14 +1,8 @@
 bounds:
-  k_pot: !!python/tuple
-  - 0.1
-  - 10.
-  k_dep: !!python/tuple
-  - 0.1
-  - 10.
-  f_pot_th: !!python/tuple
+  f_pot_half_width: !!python/tuple
   - 0.001
   - 1.
-  f_pot_half_width: !!python/tuple
+  f_pot_th: !!python/tuple
   - 0.001
   - 1.
   f_dep_th: !!python/tuple
@@ -17,15 +11,22 @@ bounds:
   f_dep_half_width: !!python/tuple
   - 0.001
   - 1.
+  k_pot: !!python/tuple
+  - 0.01
+  - 10.
+  k_dep: !!python/tuple
+  - 0.01
+  - 10.
   local_signal_decay: !!python/tuple
   - 50.
   - 1500.
   global_signal_decay: !!python/tuple
   - 50.
   - 1500.
-  peak_delta_ramp: !!python/tuple
-  - 15.
-  - 40.
+  peak_delta_weight: !!python/tuple
+  - 1.5
+  - 4.
+default_params:
 rel_bounds:
 - - local_signal_decay
   - '>'
@@ -69,19 +70,19 @@ feature_names:
 - exp3_delta_val_at_target_min
 - exp3_delta_val_at_model_min
 update_context:
-- - optimize_biBTSP_VD_D
+- - optimize_biBTSP_WD_E
   - update_model_params
 get_features_stages:
-- source: optimize_biBTSP_VD_D
+- source: optimize_biBTSP_WD_E
   get_args_static: get_args_static_signal_amplitudes
   compute_features: compute_features_signal_amplitudes
   filter_features: filter_features_signal_amplitudes
-- source: optimize_biBTSP_VD_D
+- source: optimize_biBTSP_WD_E
   get_args_dynamic: get_args_dynamic_model_ramp
   compute_features: compute_features_model_ramp
   filter_features: filter_features_model_ramp
 get_objectives:
-  optimize_biBTSP_VD_D: get_objectives
+  optimize_biBTSP_WD_E: get_objectives
 kwargs:
   data_file_name: 20200427_biBTSP_data.hdf5
   input_field_width: 90.  # cm
@@ -92,18 +93,18 @@ objective_names:
 - exp1_residual_score
 - exp2_residual_score
 - exp3_residual_score
-optimization_title: biBTSP_VD_D
+optimization_title: biBTSP_WD_E
 param_gen: PopulationAnnealing
 param_names:
-- k_pot
-- k_dep
-- f_pot_th
 - f_pot_half_width
+- f_pot_th
 - f_dep_th
 - f_dep_half_width
+- k_pot
+- k_dep
 - local_signal_decay
 - global_signal_decay
-- peak_delta_ramp
+- peak_delta_weight
 target_range:
   ramp_offset: 0.01
   delta_min_val: 0.01
@@ -112,12 +113,12 @@ target_range:
   weights_smoothness: 0.015
 target_val:
 x0:
-  peak_delta_ramp: 15.
-  global_signal_decay: 5.117370E+02
-  k_dep: 2.577449E-01
-  k_pot: 2.691966E+00
-  local_signal_decay: 1.5E+03
-  f_dep_half_width: 1.526457E-03
-  f_dep_th: 1.000023E-03
-  f_pot_half_width: 3.882245E-02
-  f_pot_th: 1.593557E-01
+  global_signal_decay: 4.489167E+02
+  local_signal_decay: 1.250320E+03
+  peak_delta_weight: 3.699263E+00
+  k_dep: 1.347899E-01
+  f_dep_half_width: 8.584021E-03
+  f_dep_th: 2.411664E-03
+  k_pot: 4.834452E-01
+  f_pot_half_width: 6.474074E-02
+  f_pot_th: 1.767498E-01
