--- a/config/optimize_biBTSP_synthetic_hybrid_alt2_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_alt2_config.yaml
@@ -1,19 +1,22 @@
 bounds:
-  vd_half_width: !!python/tuple
+  vd_pot_half_width: !!python/tuple
   - 0.001
   - 100.
-  vd_pot_min: !!python/tuple
-  - 0.
-  - 1.
-  vd_dep_min: !!python/tuple
-  - 0.
-  - 1.
+  vd_dep_half_width: !!python/tuple
+  - 0.001
+  - 100.
   vd_pot_th: !!python/tuple
   - -40.
   - 15.
   vd_dep_th: !!python/tuple
   - -40.
   - 15.
+  vd_pot_min: !!python/tuple
+  - 0.
+  - 1.
+  vd_dep_min: !!python/tuple
+  - 0.
+  - 1.
   f_pot_half_width: !!python/tuple
   - 0.001
   - 1.
@@ -54,6 +57,10 @@ rel_bounds:
   - '>'
   - 1.0
   - k_dep
+- - vd_pot_th
+  - '>='
+  - 1.0
+  - vd_dep_th
 feature_names:
 - induction1_delta_val_at_target_peak
 - induction1_delta_val_at_model_peak
@@ -107,12 +114,13 @@ get_features_stages:
 get_objectives:
   optimize_biBTSP_synthetic_hybrid_alt2: get_objectives
 kwargs:
-  data_file_name: 20190711_biBTSP_data_calibrated_input.hdf5
+  data_file_name: 20200427_biBTSP_data.hdf5
   input_field_width: 90.  # cm
   verbose: 1
   num_induction_laps: 2
   min_delta_weight: -0.2
   min_delta_ramp: -60.
+  # vd_min: 0.
   default_run_vel: 25.
   induction_loc:
     '1': 120.
@@ -122,9 +130,9 @@ kwargs:
   target_peak_shift_1: -10.
   target_peak_shift_2: 0.
   target_peak_val_1: 8.
-  target_peak_val_1_depo: 10.  # 12.
+  target_peak_val_1_depo: 9.5
   target_peak_val_2: 8.
-  target_min_val_2: 4.
+  target_min_val_2: 3.
   target_ramp_offset_1_depo: 10.
   target_ramp_offset_1_hyper: -40.
   target_ramp_offset_2_hyper: -25.
@@ -133,17 +141,17 @@ objective_names:
 - induction1_depo_residual_score
 - induction1_hyper_residual_score
 - induction2_residual_score
-# - induction2_hyper_residual_score
-- self_consistent_delta_residual_score
+- induction2_hyper_residual_score
 - ramp_amp_after_first_plateau
 optimization_title: biBTSP_synthetic_hybrid_alt2
 param_gen: PopulationAnnealing
 param_names:
-- vd_half_width
-- vd_pot_th
-- vd_dep_th
+- vd_pot_half_width
+- vd_dep_half_width
 - vd_pot_min
 - vd_dep_min
+- vd_pot_th
+- vd_dep_th
 - f_pot_half_width
 - f_pot_th
 - f_dep_th
@@ -159,10 +167,10 @@ target_range:
   delta_min_val: 0.01
   delta_peak_val: 0.01
   residuals: 0.1
-  weights_smoothness: 0.005
+  weights_smoothness: 0.015
   ramp_amp_after_first_plateau: 0.01
 target_val:
-  ramp_amp_after_first_plateau: 0.5
+  ramp_amp_after_first_plateau: 5.
 x0:
   f_dep_half_width: 4.063616E-02
   f_dep_th: 4.085338E-02
@@ -172,9 +180,10 @@ x0:
   k_dep: 5.279940E-01
   k_pot: 1.544540E+00
   local_signal_decay: 1.5E+03
-  vd_half_width: 4.648724E+00
+  vd_pot_half_width: 4.648724E+00
+  vd_dep_half_width: 4.648724E+00
   vd_dep_th: -1.963440E+01
-  vd_pot_th: -1.963440E+01
+  vd_pot_th: -1.492053E+00
   vd_pot_min: 0.
   vd_dep_min: 0.
   peak_delta_ramp: 40.
